--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -3,7 +3,7 @@ var translation="";
 
 
 function record_vote(syn_id){
-	$.post("/games/record_vote.js", {synonym_id: syn_id } );
+	$.post("/games/record_vote", {synonym_id: syn_id } );
 }
 
 
@@ -14,7 +14,7 @@ function display_next_word(){
 	}
 	$('.zone').append('<div class=\"vote_form\"></div>');
 	var word = words.shift();
-    $.post("/games/vote.js", { word: word});
+    $.post("/games/vote", { word: word});
 }
 
 function skip_keyword(){
@@ -25,7 +25,9 @@ function skip_keyword(){
 function update_errors(record_output){
 	$('.alert').remove();
 	$('#box_buttons').append('<div class="alert"></div>');
+	//alert(record_output);
 	//$('.zone').append('<div class="alert"></div>');
+	alert(record_output);
 	if(record_output == 1) {
 		<% if I18n.locale ==:en %>
 			$('.alert').append('<p style="font-size:20px; ">you cannot insert a blank synonym</p>');
@@ -52,9 +54,8 @@ function update_errors(record_output){
 
 function suggest_synonym_to_word(keyword_id){
 	translation = document.getElementById('<% if I18n.locale == :en %>suggest_synonym_textbox<% else %>suggest_synonym_textbox_arabic<% end %>').value;
-	//alert(translation+","+keyword_id);
+	alert(translation+", "+ keyword_id);
 	$.post("/games/record_synonym" ,{synonym_name: translation, keyword_id: keyword_id});
-	//alert(translation+","+keyword_id);
 }
 
 vote_form=[];
@@ -114,7 +115,3 @@ vote_form.push('</div>');
 vote_form=vote_form.join('');
 
 $('.vote_form').append(vote_form);
-
-
-
-
