--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -54,7 +54,7 @@ function update_errors(record_output){
 
 function suggest_synonym_to_word(keyword_id){
 	translation = document.getElementById('<% if I18n.locale == :en %>suggest_synonym_textbox<% else %>suggest_synonym_textbox_arabic<% end %>').value;
-	alert(translation+", "+ keyword_id);
+	alert(translation+", ");
 	$.post("/games/record_synonym" ,{synonym_name: translation, keyword_id: keyword_id});
 }
 
@@ -62,7 +62,7 @@ vote_form=[];
 vote_form.push('<div style="position:relative; left: 10px;" >');
 vote_form.push('<% submitted_word = @word %>');
 vote_form.push('<% keyword = @keyword%>');
-vote_form.push('<%syn_list = @synonym_list %>');
+vote_form.push('<% syn_list = @synonym_list %>');
 vote_form.push('<% if syn_list.size > 0 %>');
 vote_form.push('<% if I18n.locale == :ar %>');
 vote_form.push('<p id="text" class="text_arabic" > من فضلك اختر معني لكلمة:</p></br><p style="font-weight:bold; text-align:center;" >"<%= submitted_word %>"</p>');
