--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -25,9 +25,6 @@ function skip_keyword(){
 function update_errors(record_output){
 	$('.alert').remove();
 	$('#box_buttons').append('<div class="alert"></div>');
-	//alert(record_output);
-	//$('.zone').append('<div class="alert"></div>');
-	alert(record_output);
 	if(record_output == 1) {
 		<% if I18n.locale ==:en %>
 			$('.alert').append('<p style="font-size:20px; ">you cannot insert a blank synonym</p>');
@@ -54,7 +51,7 @@ function update_errors(record_output){
 
 function suggest_synonym_to_word(keyword_id){
 	translation = document.getElementById('<% if I18n.locale == :en %>suggest_synonym_textbox<% else %>suggest_synonym_textbox_arabic<% end %>').value;
-	alert(translation+", ");
+	//alert(translation);
 	$.post("/games/record_synonym" ,{synonym_name: translation, keyword_id: keyword_id});
 }
 
@@ -78,7 +75,7 @@ vote_form.push('<% else %>');
 vote_form.push('<p id="text" class="text_english" > please enter a synonym for the word:</p></br><p style="font-weight:bold; text-align:center;" >"<%= submitted_word %>"</p>');
 vote_form.push('<% end %>');
 vote_form.push('<% end %>');
-vote_form.push('<br/>');
+//vote_form.push('<br/>');
 vote_form.push('<div class="btn-toolbar" id="synonym_buttons">');
 vote_form.push('<% i=1 %>');
 vote_form.push('<%syn_list.each do |syn|%>');
