snake case added

--- a/arability/app/views/admin/_admin-add-prize.html.erb
+++ b/arability/app/views/admin/_admin-add-prize.html.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal" action="/admin/addprize" method="post" enctype="multipart/form-data">
+<form class="form-horizontal" action="/admin/add_prize" method="post" enctype="multipart/form-data">
 	<fieldset>
 		<legend>
 			<a>
