--- a/arability/app/views/admin/_admin-add-trophy.html.erb
+++ b/arability/app/views/admin/_admin-add-trophy.html.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal" action="/admin/addtrophy" method="post" enctype="multipart/form-data">
+<form class="form-horizontal" action="/admin/add_trophy" method="post" enctype="multipart/form-data">
 	<fieldset>
 		<legend>
 			<a>
