--- a/arability/app/views/admin/_admin-list-prizes.html.erb
+++ b/arability/app/views/admin/_admin-list-prizes.html.erb
@@ -36,7 +36,7 @@
   		</div>
   		<span>المستوى: <%= t.level %></span>
   		<span>مجموع النقاط: <%= t.score %></span>
-  		<span><a href="#myModalPrize" data-href="/admin/deleteprize?id=<%= t.id %>" role="button" class="edit-link-prize" data-toggle="modal">مسح</a></span>
+  		<span><a href="#myModalPrize" data-href="/admin/delete_prize?id=<%= t.id %>" role="button" class="edit-link-prize" data-toggle="modal">مسح</a></span>
   	</div>
   <% end %>
 <% else %>
