--- a/arability/app/views/admin/_admin-add-word.html.erb
+++ b/arability/app/views/admin/_admin-add-word.html.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal" action="/admin/addword" method="post">
+<form class="form-horizontal" action="/admin/add_word" method="post">
 	<fieldset>
 		<legend>
 			<a>
