--- a/arability/app/views/admin/_admin-import-csv-file.html.erb
+++ b/arability/app/views/admin/_admin-import-csv-file.html.erb
@@ -19,7 +19,7 @@
 		<div class="alert alert-error">
 	    	<button type="button" class="close" data-dismiss="alert">&times;</button>
 	    	<div>
-	    		لم يقم باختيار ملف
+	    		لم تقم باختيار ملف
 	    	</div>
 	  	</div>
 	<% end %>
