--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,69 +1,136 @@
 <div class="container" border="1"> 
-	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
-	<form>
-		<div class="container well" align="center" style="width:900px">
-			<div class="btn-toolbar" style="margin: 0;">
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-file"></i> <%= t(:import) %> <span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li><a href= "<%=import_csv_project_path%>">csv</a></li>
-					</ul>
-				</div>
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li><a href= "#">csv</a></li>
-					</ul>
-				</div>
-				<div class="btn-group">
-
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-thumbs-up"></i> <%= t(:recommended_words) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-share"></i> <%= t(:share) %></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-edit"></i> <%= t(:edit_project) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn"><i class="icon-plus-sign"></i> <%= link_to t(:Add_words) , {action: "search", controller: "search", :project_id => @project.id}, {:style=>'color:#000000', :class => "css_class"} %> <span></span></button>
-				</div>
-				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
-				</div>
-			</div><br>
-			<table class="table table-hover table-bordered table-condensed"style="width:800px;background-color:white">
-				<col style="width:25%">
-				<col style="width:25%">
-				<col style="width:10%">
-				<% if @words.count == 0 %>
-					<div class="well">
-    					<span>
-      						<%= t(:no_words_in_project) %>
-    					</span>
-  					</div>
-  					<% else %>
-  						<th style="text-align:center"><%= t(:word) %></th>
-						<th style="text-align:center"><%= t(:meaning) %></th>
-						<th style="text-align:center"></th>
-							<% count=0 %>
-						<% while count<@words.count %>
-							<tr>
-							<td style="text-align:center"><%= @words[count].name %></td>
-							<td style="text-align:center"><%= @synonyms[count].name %></td>
-							<td style="text-align:center" ><!-- <a class="btn btn-danger" style="float:left;" href="<%= new_project_path %>"><i class="icon-remove"></i></a> -->
-							<%= link_to t(:remove_from_project), {action: "remove_word", controller: "projects", :project_id => @project.id, :word_id => @words[count].id}, {:style=>'color:#FF0000', :class => "css_class"} %></td>
-							<% count = count+1 %>
-							</tr>
-						<% end %>
-					<% end %>
-				
-				
-				</table>
-			</div>
-		</form>
+  <h3>
+    <%= t(:project) %>
+    : 
+    <%= @project.name %>
+  </h3>
+  <br>
+  <form>
+    <div class="container well" align="center" style="width:900px">
+      <div class="btn-toolbar" style="margin: 0;">
+        <div class="btn-group">
+          <button class="btn dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-file">
+            </i> 
+            <%= t(:import) %> 
+            <span class="caret">
+            </span>
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <a href= "<%=import_csv_project_path%>">
+                csv
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="btn-group">
+          <button class="btn dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-briefcase">
+            </i> 
+            <%= t(:export) %> 
+            <span class="caret">
+            </span>
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <a href= "#">
+                csv
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="btn-group">
+        </div>
+        <div class="btn-group">
+          <button class="btn">
+            <i class="icon-thumbs-up">
+            </i> 
+            <%= t(:recommended_words) %> 
+            <span>
+            </span>
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn">
+            <i class="icon-share">
+            </i> 
+            <%= t(:share) %>
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn">
+            <i class="icon-edit">
+            </i> 
+            <%= t(:edit_project) %> 
+            <span>
+            </span>
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn">
+            <i class="icon-trash">
+            </i> 
+            <%= t(:delete) %> 
+            <span>
+            </span>
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn">
+            <i class="icon-plus-sign">
+            </i> 
+            <%= link_to t(:Add_words), {action: "search", controller: "search", project_id: @project.id}, {style:"color:#000000", class: "css_class"} %> 
+            <span>
+            </span>
+          </button>
+        </div>
+        <div class="btn-group">
+          <button class="btn dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-question-sign">
+            </i>  
+            <%= t(:help) %> 
+            <span class="caret">
+            </span>
+          </button>
+        </div>
+      </div>
+      <br>
+      <table class="table table-hover table-bordered table-condensed"style="width:800px;background-color:white">
+        <col style="width:25%">
+        <col style="width:25%">
+        <col style="width:10%">
+        <% if @words.count == 0 %>
+          <div class="well">
+              <span>
+                <%= t(:no_words_in_project) %>
+              </span>
+          </div>
+        <% else %>
+          <th style="text-align:center">
+            <%= t(:word) %>
+          </th>
+          <th style="text-align:center">
+            <%= t(:meaning) %>
+          </th>
+          <th style="text-align:center">
+          </th>
+          <% count=0 %>
+          <% while count<@words.count %>
+            <tr>
+              <td style="text-align:center">
+                <%= @words[count].name %>
+              </td>
+              <td style="text-align:center">
+                <%= @synonyms[count].name %>
+              </td>
+              <td style="text-align:center" >
+                <%= link_to t(:remove_from_project), {action: "remove_word", controller: "projects", project_id: @project.id, word_id: @words[count].id}, {style:"color:#FF0000", class: "css_class"} %>
+              </td>
+              <% count = count + 1 %>
+            </tr>
+          <% end %>
+        <% end %>
+      </table>
+    </div>
+  </form>
