--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -10,9 +10,15 @@
 					</ul>
 				</div>
 				<div class="btn-group">
-					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> <%= t(:export) %> <span class="caret"></span></button>
+					<button class="btn dropdown-toggle" data-toggle="dropdown">
+						<i class="icon-briefcase">
+						</i> 
+						<%= t(:export) %> 
+						<span class="caret">
+						</span>
+					</button>
 					<ul class="dropdown-menu">
-						<%= link_to t(:file)+'.csv', action: "export_to_csv", controller: "projects", :project_id => @project.id %>
+						<%= link_to t(:file) + ".csv", action: "export_to_csv", controller: "projects", project_id: @project.id %>
 					</ul>
 				</div>
 				<div class="btn-group">
