--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -29,13 +29,12 @@
                 <%= f.check_box :remember_me, :style => "float: left; margin-right: 10px;" %>
                 <%= f.label :remember_me %>
                 <%= f.submit "Sign In", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;", :class => "btn btn-primary" %>
-               <%= button_to "Sign In with Google", gamer_omniauth_authorize_path(:google_oauth2), :style => "clear: left; width: 100%; height: 32px; font-size: 13px", :class => "btn btn-success" %>
-              <% end %>
+                <% end %>
+                <%= button_to t(:log_in_google), gamer_omniauth_authorize_path(:google_oauth2), :style => "clear: left; width: 100%; height: 32px; font-size: 13px", :class => "btn btn-success" %>
             </div>
           </li>
         </ul>
       <% else %>
-
       <ul class="nav pull-right">
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>Sign out</a></li>
         <li><a href="/gamers/edit"><i class="icon-wrench"></i>Account Settings</a></li>
