--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -31,7 +31,11 @@
 					<button class="btn"><i class="icon-trash"></i> <%= t(:delete) %> <span></span></button>
 				</div>
 				<div class="btn-group">
-					<button class="btn"><i class="icon-plus-sign"></i> <%= link_to t(:Add_words) , {action: "search", controller: "search", :project_id => @project.id}, {:style=>'color:#000000', :class => "css_class"} %> <span></span></button>
+					<button class="btn">
+						<i class="icon-plus-sign">
+						</i> 
+						<%= link_to t(:Add_words) , {action: "search", controller: "search", project_id: @project.id}, {style: "color:#000000", class: "css_class"} %>
+					</button>
 				</div>
 				<div class="btn-group">
 					<button class="btn dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign"></i>  <%= t(:help) %> <span class="caret"></span></button>
