--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -25,15 +25,18 @@
   border-color: #f3f3f3;
 }
 
+#navItems{
+  font-size: 200%;
+  line-height: 1.3;
+  border-radius: 50px;
+  color: white;
+}
 .nav-box {
-  float: right;
-  width: 130px;
-  background-color: rgba(243,243,243,0.4);
-  height:50px;
-  padding: 0;
-  font-size: 30px;
-  text-align: center;
-  padding-top: 20px;
+  width: 90px;
+  height: 40px;
+  margin-top: 15px;
+  font-size: 200%;
+  
   
 }
 .vote_form {
@@ -199,6 +202,7 @@ margin-left: 80px;
   width: 200px;
   height: 38px;
   padding-left:30px;
+  margin-right: 50px;
 }
 
 #btn-restart{
