--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -96,6 +96,7 @@
     if(cache == "") {
       cache = document.getElementById("zone").innerHTML;
     }
+    nav_locked = true;
     clear();
     $.get("/games/showprizes");
   }
@@ -107,6 +108,7 @@
     if(cache == "") {
       cache = document.getElementById("zone").innerHTML;
     }
+    nav_locked = true;
     clear();
     $.get("/games/showtrophies");
   }
@@ -165,10 +167,14 @@ function setButtons(){
   }
 
   function disableNav() {
+    var lists = $("[id*='navItems']");
+    lists.addClass("disabled");
     nav_locked = true;
   }
 
   function enableNav() {
+    var lists = $("[id*='navItems']");
+    lists.removeClass("disabled");
     nav_locked = false;
   }
 
@@ -192,20 +198,20 @@ function setButtons(){
 
 <div class="game-zone">
   <div class="game-nav">
-    <div class="nav-box" onclick="hallOfFame()">
+    <div class="nav-box btn btn-inverse" id ="navItems" onclick="hallOfFame()">
       الرتبة
     </div>
 
-    <div class="nav-box" onclick="showPrizes()">
+    <div class="nav-box btn btn-inverse" id = "navItems" onclick="showPrizes()">
       جوائز
   </div>
-    <div class="nav-box" onclick="showTrophies()">
+    <div class="nav-box btn btn-inverse" id="navItems" onclick="showTrophies()">
       الإنجازات
     </div>
-    <div class="nav-box">
+    <div class="nav-box btn btn-inverse" id="navItems">
      بروفيل
     </div>
-    <div class="nav-box">
+    <div class="nav-box btn btn-inverse" id="navItems">
      إعدادات
     </div>
     <div id="level" class="nav-box">
