[Isue #186][MC] fixed merge conflict

--- a/arability/app/views/developer/new.html.erb
+++ b/arability/app/views/developer/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@developer, :url: { :action => "create" }, :html: { :class: "form-signin" }) do |f| %>
+<%= form_for(@developer, :url { :action => "create" }, :html: { :class: "form-signin" }) do |f| %>
   <h3 class="form-signin-heading">
     <%= t(:register_as_developer) %>
   </h3>
