--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -230,7 +230,7 @@ function setButtons(){
       <% if I18n.locale==:ar %>
     <h2 class="lang-header">إختر اللغة التي تريد اللعب بها</h2><br>
     <div class="game-lang">
-      <button class="btn btn-info eng-btn" onclick="setLang(0)">الانجليزية</button><br><br><br><br>
+      <button class="btn btn-info eng-btn" id = "eng-btn" onclick="setLang(0)">الانجليزية</button><br><br><br><br>
       <button class="btn btn-success ar-btn" onclick="setLang(1)">العربية</button><br><br><br><br>
       <button class="btn btn-warning both-btn" onclick="setLang(2)">كلاهما</button>
     </div>
