[issue #177] fixed queries in views

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -90,12 +90,13 @@
 		</div>
 		<div id="collective" class="accordion-body collapse in">
 			<div class="accordion-inner">
-				<% key_id = Keyword.where(:name => @search_keyword).first.id %>
-				<% if Keyword.get_keyword_synonym_visual(key_id) != [] %>
+				<% key_id = getID(@search_keyword) %>
+				<% result = Keyword.get_keyword_synonym_visual(key_id) %>
+				<% if  result != [] %>
 				 	<%= high_chart("my_id4", chart_keyword_synonym(key_id)) do |c| %>
           <%= raw "options.tooltip.formatter = function() {return '<b>'+ this.point.name +'</b>: '+ this.y +' %';}"  %>
           <%= raw "options.plotOptions.pie.dataLabels.formatter = function() { if (this.y > 5) return this.point.name; }"  %>
-          <% end %>
+        <% end %>
         <% else %>
           <p><%= t(:no_votes_for_word)%></p>
       	<% end %>
